whoami/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  rules:
    - host: whoami.meyerzuwestram.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami
                port: 
                  number: 80
  tls:
    - hosts:
        - whoami.meyerzuwestram.net 
      secretName: whoami-tls
